[package]
name = "setoff-database"
version = "0.1.0"
authors = ["abdullah <44318011+fx2y@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../setoff-common", version = "0.1.0", package = "setoff-common" }
futures = "0.3"
atomicwrites = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
futures = { version = "0.3", features = [ "thread-pool" ] }
tempfile = "3.1"